RESOLVED FIXED268839
[WebGPU] Device::createTexture will crash if pixel format is invalid
https://bugs.webkit.org/show_bug.cgi?id=268839
Summary [WebGPU] Device::createTexture will crash if pixel format is invalid
Mike Wyrzykowski
Reported 2024-02-06 10:40:15 PST
[WebGPU] Device::createTexture will crash if pixel format is invalid
Attachments
Mike Wyrzykowski
Comment 1 2024-02-06 10:40:37 PST
Mike Wyrzykowski
Comment 2 2024-02-06 10:49:27 PST
EWS
Comment 3 2024-02-06 18:40:23 PST
Committed 274187@main (f7b9c813aa24): <https://commits.webkit.org/274187@main> Reviewed commits have been landed. Closing PR #23936 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.