[WebGPU] Device::createTexture will crash if pixel format is invalid https://bugs.webkit.org/show_bug.cgi?id=268839 <radar://122402160>

Reviewed by Dan Glastonbury.

Invalid pixel format is not allowed to create a texture or
texture view.

* Source/WebGPU/WebGPU/Texture.mm:
(WebGPU::Device::createTexture):
(WebGPU::Texture::createView):

Canonical link: https://commits.webkit.org/274187@main